syntax = "proto3";

package area_worker;

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

service AreaWorkerService {
    rpc LaunchJob(AreaData) returns (google.protobuf.Empty) {}
    rpc KillJob(AreaData) returns (google.protobuf.Empty) {}
}

message AreaData {
    string name = 1;
    google.protobuf.Struct params = 2;
}
